remove slf4j dependency